# miniSDIF

./: .gitignore  CMakeLists.txt  readme.md
miniSDIF/: miniSDIF.h  module.modulemap
miniSDIF-iOS/: miniSDIF_iOS.h
miniSDIF.xcodeproj/: project.pbxproj
miniSDIF.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
miniSDIF.xcodeproj/project.xcworkspace/xcuserdata/njazz.xcuserdatad/: UserInterfaceState.xcuserstate
miniSDIF.xcodeproj/xcuserdata/njazz.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
miniSDIF.xcodeproj/xcuserdata/njazz.xcuserdatad/xcschemes/: miniSDIF.xcscheme  miniSDIFTests.xcscheme  xcschememanagement.plist
miniSDIFTests/: miniSDIFTests.mm  testProc.sdif  testWrite.sdif
py/: CMakeLists.txt  Makefile  Piano-B.sdif  build.sh  build_lib.py  gen_auto.py  gen_bind.py  mini-sdif-py.c  mini-sdif-py.cpp  minisdifpy.cpp  readme.md  test.py  test_read_and_export.py
py2/: CMakeLists.txt  build.sh  test_complex.py
spec/: SDIF Specification.webarchive  SDIF Standard Description Types.webarchive
src/: mSDIF-c.h  mSDIF.cpp  mSDIF.hpp  mSDIFFile.cpp  mSDIFFile.hpp  mSDIFFrame.cpp  mSDIFFrame.hpp  mSDIFMatrix.cpp  mSDIFMatrix.hpp  mSDIFStructures.hpp  mSDIFTypes.cpp  mSDIFTypes.hpp  mSDIFUtils.hpp
